# OOP-Lab-4

./: CMakeLists.txt  Dockerfile.dockerfile  README.md  devcontainer.json  program.cpp
Libs/: Angle.h  Array.h  Figure.h  Point.h  Scalar.h
tests/: test.cpp
